--- a/frontend/src/components/styles/Payments.css
+++ b/frontend/src/components/styles/Payments.css
@@ -1,5 +1,5 @@
 .payments {
-  height: 540px;
+  height: 90%;
   overflow: scroll;
   color: black;
 }
@@ -43,7 +43,7 @@
   font-weight: bold;
   border-radius: 10px;
   background-color: #ff9900;
-  filter: drop-shadow(1px 1px 2px rgb(0 0 0/0.4)); 
+  filter: drop-shadow(1px 1px 2px rgb(0 0 0/0.4));
 }
 .payment_price_container > button:disabled {
   cursor: not-allowed;
