--- a/frontend/src/components/styles/Login.css
+++ b/frontend/src/components/styles/Login.css
@@ -5,13 +5,12 @@ input {
 }
 .login {
   background-color: #121d25;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border-radius: 20px;
 }
 .login_container {
   width: 300px;
@@ -82,7 +81,7 @@ input {
   cursor: pointer;
 }
 
-.login_container > form > button:disabled{
+.login_container > form > button:disabled {
   cursor: not-allowed;
   pointer-events: all !important;
 }
