--- a/frontend/src/components/styles/SignUp.css
+++ b/frontend/src/components/styles/SignUp.css
@@ -5,13 +5,12 @@ input {
 }
 .signup {
   background-color: #121d25;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border-radius: 20px;
 }
 .signup_container {
   width: 300px;
@@ -26,7 +25,6 @@ input {
 .signup_container > h1 {
   font-weight: 500;
   margin: 0;
-
 }
 
 .signup_container > form > h5 {
