--- a/frontend/src/components/styles/Slide.css
+++ b/frontend/src/components/styles/Slide.css
@@ -1,44 +1,10 @@
-.each-slide > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-size: cover;
-  height: 200px;
+.slider_comp {
+  margin: 0.5rem;
 }
-
-.slide_1 > img {
+.slider_img {
+  padding: 0.5rem;
   border-radius: 25px;
-  height: 180px;
+  height: 200px;
   width: 95%;
   filter: drop-shadow(3px 5px 2px rgb(0 0 0/0.4));
-}
-.slide_2 > img {
-  border-radius: 25px;
-  height: 180px;
-  width: 98%;
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0/0.4));
-}
-.slide_3 > img {
-  border-radius: 25px;
-  height: 180px;
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0/0.4));
-  width: 98%;
-}
-.slide_4 > img {
-  border-radius: 25px;
-  height: 180px;
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0/0.4));
-  width: 98%;
-}
-.slide_5 > img {
-  border-radius: 25px;
-  height: 180px;
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0/0.4));
-  width: 98%;
-}
-.slide_6 > img {
-  border-radius: 25px;
-  height: 180px;
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0/0.4));
-  width: 98%;
 }
