--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,8 @@
+html,
 body {
-  margin: 12px;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
   padding: 0;
   letter-spacing: 1px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -7,8 +10,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eb8714;
-  /* background-color: #b1bcca; */
   color: white;
 }
 
